# data_generator

./: README.md  setup.cfg
data_generator/: config.py  generator.py  process_handler.py
data_generator/type_generator/: boolean_generator.py  date_time_generator.py  numeric_generator.py  string_generator.py  type_generator.py
examples/: get_dataframe.py  record_generator.py
src/data_generator/: config.py  data_generator.py  data_selector.py  data_types.py  generator.py  process_handler.py
src/type_generator/: boolean_generator.py  date_time_generator.py  numeric_generator.py  numeric_generator_bckp.py  string_generator.py  type_generator.py
tests/: test_boolean_generator.py  test_data_selector.py  test_date_time_generator.py  test_numeric_generator.py  test_row_generator.py  test_string_generator.py
