[metadata]
name = Data-Generator
version = 0.0.1
author = Balakrishna Maduru
author_email = balakrishnamaduru@gmail.com
description = Generate data based on the requirements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Balakrishna-maduru/data_generator
project_urls =
    Bug Tracker = https://github.com/Balakrishna-maduru/data_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src